# conways-game-of-life

./: meson.build  run.sh
src/: cgol.c
